Creacion de variables de entorno

--- a/front/src/app/layout/upload-course/components/form/form.component.html
+++ b/front/src/app/layout/upload-course/components/form/form.component.html
@@ -14,7 +14,7 @@
     <div class="div-file">
         <label class="label-file" for="curso">{{inputCurso}}</label>
         <input class="input-file" type="file" id="curso" (change)="agregarCurso($event)"
-        accept="application/zip, application/rar">
+        accept="application/zip">
     </div>
     
     <div class="div-file">
