--- a/front/src/app/layout/main/components/courses/courses.component.scss
+++ b/front/src/app/layout/main/components/courses/courses.component.scss
@@ -17,7 +17,8 @@
         justify-items: center;
         gap: 2rem;
         max-height: 72vh;
-        overflow: auto;
+        overflow-y: scroll;
+        overflow-x: hidden;
         border-radius: 1rem;
 
         .course {
